# Interfacing-Techniques-Project

./: README.md  algorithms.md  wall_follower.md
Flood Fill Simulation/: CMakeLists.txt  Cell.h  Coordinates.h  Main.cpp  Maze.h  MazeGraph.h
Flood Fill using C/: CMakeLists.txt
Flood Fill using C/src/: maze.cpp  motors.cpp  mouse.cpp  ported.cpp  proxy.py  test.cpp  ui.cpp
Left Hand/left_hand_rule/: left_hand_rule.ino
Left_Hand_Final/: Left_Hand_Final.ino
NCodeLeftHand/: NCodeLeftHand.ino  PinsAndVariables.h
New folder/: CMakeLists.txt
docs/: HW2.docx
mms/mms-python-master/: API.py  Main.py  floodFill.py
mms/mms-python-master/Amaya/piccolaMain/: piccolaMain.ino  piccolaSpeed.h  piccolaVariables.h
untitled/: CMakeLists.txt  main.c
